2011-09-29  Yuqiang Xian  <yuqiang.xian@intel.com>

        JSVALUE32_64 DFG JIT failed to be built on 32-bit Linux due to incorrect overloaded OpInfo constructor
        https://bugs.webkit.org/show_bug.cgi?id=69054

        Reviewed by Gavin Barraclough.

        size_t is equal to uint32_t on most 32-bit platforms, except for Mac OS.

        * dfg/DFGNode.h:

2011-09-28  Filip Pizlo  <fpizlo@apple.com>

        DFG checkArgumentTypes fails to check boolean predictions
        https://bugs.webkit.org/show_bug.cgi?id=69059

        Reviewed by Gavin Barraclough.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::checkArgumentTypes):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::checkArgumentTypes):

2011-09-28  Gavin Barraclough  <barraclough@apple.com>

        Build fix pt 2 for r96286.

        * assembler/MacroAssemblerCodeRef.h:

2011-09-28  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix attempt for r96286.

        * assembler/MacroAssemblerCodeRef.h:

2011-09-28  Gavin Barraclough  <barraclough@apple.com>

        DFG JIT Operations on 32_64 should use stdcall calling convention.
        https://bugs.webkit.org/show_bug.cgi?id=69046

        Reviewed by Sam Weinig.

        All calls out are expecting stdcall conventions, but the default on OS X are cdecl.
        Leave D_DFGOperation_DD calls as the one exception, since we want to be able to link
        directly to std library functions like fmod - leave these calls obeying the default
        platform calling convention.

        * assembler/MacroAssemblerCodeRef.h:
        (JSC::FunctionPtr::FunctionPtr):
            - Add implicit constructors for std calls.
        * dfg/DFGJITCodeGenerator.h:
        (JSC::DFG::callOperation):
            - Make this work non-Mac platforms.
        * dfg/DFGOperations.cpp:
        (JSC::DFG::operationPutByValInternal):
        * dfg/DFGOperations.h:
            - Mark all operations as stdcalls.
